Add workflow_dispatch trigger and output variable settings to CI workflow
- Introduced workflow_dispatch event to allow manual triggering of the CI workflow.
- Added a step to set output variables based on the event type, ensuring correct service and change detection outputs for both manual and automatic triggers.
- Updated README.md in auth-service to indicate CI trigger for clarity.

--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -5,6 +5,7 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main, develop]
+  workflow_dispatch:
 
 env:
   AWS_REGION: ap-northeast-2
@@ -17,6 +18,8 @@ jobs:
     outputs:
       services: ${{ steps.filter.outputs.changes }}
       any_changed: ${{ steps.filter.outputs.any_changed }}
+      services: ${{ steps.set-outputs.outputs.services }}
+      any_changed: ${{ steps.set-outputs.outputs.any_changed }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -83,6 +86,17 @@ jobs:
             settlement-service:
               - 'settlement-service/**'
               - '_shared/**'
+
+      - name: Set output variables
+        id: set-outputs
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo 'services=["api-gateway","auth-service","product-service","order-service","payment-service","user-service","cart-service","review-service","notification-service","search-service","inventory-service","seller-service","admin-service","file-service","banner-service","coupon-service","shipping-service","stats-service","settlement-service"]' >> $GITHUB_OUTPUT
+            echo "any_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "services=${{ steps.filter.outputs.changes }}" >> $GITHUB_OUTPUT
+            echo "any_changed=${{ steps.filter.outputs.any_changed }}" >> $GITHUB_OUTPUT
+          fi
 
   build-and-push:
     name: Build and Push
