--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -149,7 +149,7 @@ jobs:
         continue-on-error: true
 
       - name: Push Docker image to ECR
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ steps.meta.outputs.sha_short }}
@@ -159,7 +159,7 @@ jobs:
           docker push $ECR_REGISTRY/doa-market-${{ matrix.service }}:${{ steps.meta.outputs.branch }}
 
       - name: Update Helm values (for ArgoCD)
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
         env:
           IMAGE_TAG: ${{ steps.meta.outputs.sha_short }}
         run: |
@@ -167,7 +167,7 @@ jobs:
           sed -i "s|tag:.*|tag: $IMAGE_TAG|g" helm/doa-market/values/${{ matrix.service }}.yaml
 
       - name: Commit and push Helm changes
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref == 'refs/heads/main'
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
