Update CI workflow to specify service directory for Docker image builds
- Modified the Docker build command in the CI workflow to target the specific service directory instead of the root, improving build accuracy and organization.

--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -136,7 +136,7 @@ jobs:
             -t $ECR_REGISTRY/doa-market-${{ matrix.service }}:$IMAGE_TAG \
             -t $ECR_REGISTRY/doa-market-${{ matrix.service }}:latest \
             -t $ECR_REGISTRY/doa-market-${{ matrix.service }}:${{ steps.meta.outputs.branch }} \
-            .
+            ${{ matrix.service }}
 
       - name: Run security scan
         uses: aquasecurity/trivy-action@master
