--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -183,5 +183,14 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add helm/
           git diff --staged --quiet || git commit -m "chore: update ${{ matrix.service }} image to ${{ steps.meta.outputs.sha_short }}"
-          git pull origin main --rebase
-          git push origin HEAD:main
+
+          # Retry logic to handle race conditions during parallel pushes
+          for i in {1..10}; do
+            git pull origin main --rebase
+            if git push origin HEAD:main; then
+              exit 0
+            fi
+            echo "Push failed (attempt $i). Retrying in random seconds..."
+            sleep $(( ( RANDOM % 10 ) + 1 ))
+          done
+          exit 1
