Enhance Helm templates with service account annotations
- Updated the Helm template for service accounts to use a default value for annotations, improving flexibility.
- Modified the CI workflow to include service account annotations in the generated values file for better configuration management.

--- a/helm/doa-market/templates/serviceaccount.yaml
+++ b/helm/doa-market/templates/serviceaccount.yaml
@@ -9,9 +9,10 @@ metadata:
   labels:
     app: {{ $serviceName }}
     {{- include "doa-market.labels" $ | nindent 4 }}
-  {{- if $service.serviceAccount.annotations }}
+  {{- $sa := $service.serviceAccount | default dict }}
+  {{- if $sa.annotations }}
   annotations:
-    {{- toYaml $service.serviceAccount.annotations | nindent 4 }}
+    {{- toYaml $sa.annotations | nindent 4 }}
   {{- end }}
 {{- end }}
 {{- end }}
