Update CI workflow to include service type and port in generated values file
- Modified the Helm values file generation in the CI workflow to add service type and port configuration, enhancing service deployment options.
- This change improves the default setup for services by specifying ClusterIP type and port 80.

--- a/.github/workflows/ci-build-push.yml
+++ b/.github/workflows/ci-build-push.yml
@@ -187,7 +187,7 @@ jobs:
             sed -i "s|tag:.*|tag: $IMAGE_TAG|g" "$FILE"
           else
             echo "Creating new values file: $FILE"
-            printf "image:\n  repository: %s/doa-market-%s\n  tag: %s\nserviceAccount:\n  annotations: {}\n" "$ECR_REGISTRY" "${{ matrix.service }}" "$IMAGE_TAG" > "$FILE"
+            printf "image:\n  repository: %s/doa-market-%s\n  tag: %s\nserviceAccount:\n  annotations: {}\nservice:\n  type: ClusterIP\n  port: 80\n" "$ECR_REGISTRY" "${{ matrix.service }}" "$IMAGE_TAG" > "$FILE"
           fi
 
       - name: Commit and push Helm changes
