--- a/helm/doa-market/values/cart-service.yaml
+++ b/helm/doa-market/values/cart-service.yaml
@@ -1,3 +1,10 @@
 image:
   repository: 478266318018.dkr.ecr.ap-northeast-2.amazonaws.com/doa-market-cart-service
   tag: bb4ae65
+
+serviceAccount:
+  annotations: {}
+
+service:
+  type: ClusterIP
+  port: 3017
