--- a/helm/doa-market/values/order-service.yaml
+++ b/helm/doa-market/values/order-service.yaml
@@ -1,3 +1,10 @@
 image:
   repository: 478266318018.dkr.ecr.ap-northeast-2.amazonaws.com/doa-market-order-service
   tag: 2c3c63a
+
+serviceAccount:
+  annotations: {}
+
+service:
+  type: ClusterIP
+  port: 3004
