Refactor Helm templates to improve variable handling and defaults
- Updated deployment, HPA, ingress, and PDB templates to use intermediate variables for better clarity and maintainability.
- Enhanced autoscaling and ingress configurations to utilize default values more effectively, ensuring consistent behavior across services.
- Improved overall template structure for easier management and readability.

--- a/helm/doa-market/templates/deployment.yaml
+++ b/helm/doa-market/templates/deployment.yaml
@@ -32,8 +32,8 @@ spec:
         fsGroup: 1000
       containers:
       - name: {{ $serviceName }}
-        image: "{{ $.Values.global.registry }}/doa-market-{{ $serviceName }}:{{ $service.image.tag | default $.Values.defaults.image.tag }}"
-        imagePullPolicy: {{ $service.image.pullPolicy | default $.Values.defaults.image.pullPolicy }}
+        image: "{{ $.Values.global.registry }}/doa-market-{{ $serviceName }}:{{ $service.tag | default $.Values.defaults.image.tag }}"
+        imagePullPolicy: {{ $.Values.defaults.image.pullPolicy }}
         ports:
         - name: http
           containerPort: {{ $service.port }}
