--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "winston": "^3.11.0",
-    "joi": "^17.11.0"
+    "joi": "^17.11.0",
+    "prom-client": "^15.1.0"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
-    "@types/node": "^20.10.5"
+    "@types/node": "^20.10.5",
+    "@types/express": "^4.17.21"
   }
 }
