--- a/seller-service/package.json
+++ b/seller-service/package.json
@@ -12,24 +12,25 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
+    "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
     "@types/supertest": "^6.0.2",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
     "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3"
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
-
